# onetbb_cmake_fetch_content

./: CMakeLists.txt  README.md  azure-pipelines.yml  one_tbb_example.cpp
.github/workflows/: build.yml
